--- a/TaskAuthenticateWebseverShowdetail/Base.lproj/Main.storyboard
+++ b/TaskAuthenticateWebseverShowdetail/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -32,13 +33,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LoginBG" translatesAutoresizingMaskIntoConstraints="NO" id="dvA-0h-dXE">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authentication" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10F-OF-jxj">
                                 <rect key="frame" x="32" y="20" width="312.5" height="68"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="68" id="dN7-BL-jeJ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                <color key="textColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="KbC-KL-D1A">
@@ -62,7 +66,10 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="X3n-5C-jHL"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="loginButtonTap:" destination="qAq-c3-qWR" eventType="touchUpInside" id="XOw-K9-s1c"/>
                                 </connections>
@@ -72,9 +79,11 @@
                         <constraints>
                             <constraint firstItem="KbC-KL-D1A" firstAttribute="centerY" secondItem="hAe-n4-gfX" secondAttribute="centerY" multiplier="1:2" id="6pU-AB-NO0"/>
                             <constraint firstItem="10F-OF-jxj" firstAttribute="centerX" secondItem="hAe-n4-gfX" secondAttribute="centerX" id="Cmh-9S-RIC"/>
+                            <constraint firstItem="hAe-n4-gfX" firstAttribute="top" secondItem="dvA-0h-dXE" secondAttribute="top" constant="20" id="Do6-lS-TjM"/>
                             <constraint firstItem="KbC-KL-D1A" firstAttribute="centerX" secondItem="hAe-n4-gfX" secondAttribute="centerX" id="Fx5-jh-f6C"/>
                             <constraint firstItem="OTe-Et-MYW" firstAttribute="top" secondItem="KbC-KL-D1A" secondAttribute="bottom" constant="55" id="KGQ-0J-Ios"/>
                             <constraint firstItem="10F-OF-jxj" firstAttribute="top" secondItem="hAe-n4-gfX" secondAttribute="top" id="LTY-Jo-mBW"/>
+                            <constraint firstItem="hAe-n4-gfX" firstAttribute="trailing" secondItem="dvA-0h-dXE" secondAttribute="trailing" id="MOB-Be-Dck"/>
                             <constraint firstItem="OTe-Et-MYW" firstAttribute="centerX" secondItem="KbC-KL-D1A" secondAttribute="centerX" id="Oqt-aH-hfP"/>
                             <constraint firstItem="OTe-Et-MYW" firstAttribute="width" secondItem="KbC-KL-D1A" secondAttribute="width" id="YYI-7V-b8b"/>
                             <constraint firstItem="OTe-Et-MYW" firstAttribute="height" secondItem="KbC-KL-D1A" secondAttribute="height" id="ZOz-lK-fwX"/>
@@ -82,12 +91,15 @@
                             <constraint firstItem="KbC-KL-D1A" firstAttribute="width" secondItem="aaX-qs-2fr" secondAttribute="width" multiplier="1:1.2" id="jAY-Es-Vc6"/>
                             <constraint firstItem="hAe-n4-gfX" firstAttribute="bottom" secondItem="e5o-E3-SXG" secondAttribute="bottom" constant="20" id="l6G-Gn-ZuO"/>
                             <constraint firstItem="e5o-E3-SXG" firstAttribute="centerX" secondItem="hAe-n4-gfX" secondAttribute="centerX" id="lHk-Kf-Jxe"/>
+                            <constraint firstItem="dvA-0h-dXE" firstAttribute="leading" secondItem="hAe-n4-gfX" secondAttribute="leading" id="lT9-RY-0v3"/>
+                            <constraint firstItem="hAe-n4-gfX" firstAttribute="bottom" secondItem="dvA-0h-dXE" secondAttribute="bottom" id="nB8-0h-Xyb"/>
                             <constraint firstItem="e5o-E3-SXG" firstAttribute="width" secondItem="OTe-Et-MYW" secondAttribute="width" id="w9R-9z-gtV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hAe-n4-gfX"/>
                     </view>
                     <navigationItem key="navigationItem" id="RwR-QW-hiT"/>
                     <connections>
+                        <outlet property="backGroundImage" destination="dvA-0h-dXE" id="6Si-dg-Rw0"/>
                         <outlet property="password" destination="OTe-Et-MYW" id="KfW-iX-OsQ"/>
                         <outlet property="userId" destination="KbC-KL-D1A" id="XOM-eT-yQ7"/>
                     </connections>
@@ -124,26 +136,35 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="do6-To-tcR">
                                                     <rect key="frame" x="0.0" y="0.0" width="248" height="191"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ov-YC-1EI">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ov-YC-1EI">
                                                     <rect key="frame" x="0.0" y="191" width="248" height="38"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="d9i-3A-ozk">
+                                                    <rect key="frame" x="8" y="8" width="232" height="183"/>
+                                                    <color key="color" red="1" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                </activityIndicatorView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
+                                            <constraint firstItem="d9i-3A-ozk" firstAttribute="top" secondItem="lr6-3s-ePe" secondAttribute="topMargin" id="1gx-0p-cH6"/>
                                             <constraint firstItem="2ov-YC-1EI" firstAttribute="leading" secondItem="lr6-3s-ePe" secondAttribute="leading" id="4Rb-Hc-ioR"/>
+                                            <constraint firstItem="d9i-3A-ozk" firstAttribute="leading" secondItem="lr6-3s-ePe" secondAttribute="leadingMargin" id="BD8-wW-ku4"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="d9i-3A-ozk" secondAttribute="trailing" id="BGt-wv-wpI"/>
                                             <constraint firstAttribute="trailing" secondItem="do6-To-tcR" secondAttribute="trailing" id="JQF-6a-H7u"/>
                                             <constraint firstItem="do6-To-tcR" firstAttribute="leading" secondItem="lr6-3s-ePe" secondAttribute="leading" id="Nwx-df-UpY"/>
                                             <constraint firstItem="2ov-YC-1EI" firstAttribute="top" secondItem="do6-To-tcR" secondAttribute="bottom" id="db4-wU-GPq"/>
                                             <constraint firstItem="do6-To-tcR" firstAttribute="height" secondItem="lr6-3s-ePe" secondAttribute="height" multiplier="1:1.2" id="haS-9Z-2Hg"/>
                                             <constraint firstItem="do6-To-tcR" firstAttribute="top" secondItem="lr6-3s-ePe" secondAttribute="top" id="niz-B1-2cj"/>
                                             <constraint firstAttribute="trailing" secondItem="2ov-YC-1EI" secondAttribute="trailing" id="qbM-EI-Urq"/>
+                                            <constraint firstItem="2ov-YC-1EI" firstAttribute="top" secondItem="d9i-3A-ozk" secondAttribute="bottom" id="tPl-xq-bFo"/>
                                             <constraint firstAttribute="bottom" secondItem="2ov-YC-1EI" secondAttribute="bottom" id="xod-So-Ar6"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="activityIndicator" destination="d9i-3A-ozk" id="B9G-fQ-aMf"/>
                                             <outlet property="artistImage" destination="do6-To-tcR" id="eKI-ja-daC"/>
                                             <outlet property="artistName" destination="2ov-YC-1EI" id="E9l-9d-3YD"/>
                                         </connections>
@@ -270,4 +291,7 @@
             <point key="canvasLocation" x="1165.5999999999999" y="9.4452773613193415"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LoginBG" width="1920" height="1200"/>
+    </resources>
 </document>
